index.html file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>JavaScript </title>
 </head>
 <body>
-    <h1>Testing</h1>
-   <script src="studentGradeGenerator.js" ></script>
+    <h1>Week 1 Code Challenge</h1>
+   <!--<script src="studentGradeGenerator.js" ></script>-->
+
+   <!--<script src="speedDetector.js"></script>-->
+
+   <script src="netSalaryCalculator.js"></script>
 </body>
 </html>
